--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "Coursework.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint . && ./1.js",
+    "lint": "eslint . && prettier -c \"**/*.js\" \"**/*.json\" \"**/*.md\" \".*rc\"",
+    "fmt": "prettier --write \"**/*.js\" \"**/*.json\" \"**/*.md\" \".*rc\""
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/JuliaGerasymenko/Coursework/issues"
   },
-  "homepage": "https://github.com/JuliaGerasymenko/Coursework#readme"
+  "homepage": "https://github.com/JuliaGerasymenko/Coursework#readme",
+  "dependencies": {
+    "metatests": "^0.7.1"
+  }
 }
